--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux-persist": "^6.0.0",
+    "reselect": "^4.1.5",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
