--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.21",
+    "axios": "^0.27.2",
     "final-form": "^4.20.6",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
